# license_plate_recognition

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
checkpoints/: best_checkpoint.ckpt
src/: streamlit_app.py
src/license_plate_recognition/: model.py  recognize.py  train.py  trainer.py
src/license_plate_recognition/data/: alphabet.py  dataset.py  utils.py
