[tool.poetry]
name = "license_plate_recognition"
version = "0.1.0"
description = ""
authors = ["Sabina Bayramova <sb.sabina00@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
black = "^22.10.0"
mypy = "^0.991"
flake8-black = "^0.3.5"
flake8-import-order = "^0.18.2"
flake8-bugbear = "^22.12.6"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
