[tool.poetry]
name = "license_plate_recognition"
version = "0.1.0"
description = ""
authors = ["Sabina Bayramova <sb.sabina00@gmail.com>"]

[tool.poetry.scripts]
train = "license_plate_recognition.train:train"
recognize = "license_plate_recognition.recognize:recognize"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
torch = "^1.12.1"
torchvision = "^0.13.1"
torchmetrics = "^0.11.0"
pytorch-lightning = "^1.8.3"
matplotlib = "^3.6.2"
pandas = "^1.5.2"
seaborn = "^0.12.1"
tensorboard = "^2.11.0"
streamlit = "1.10.0"
opencv-python-headless = "^4.6.0"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
black = "^22.10.0"
mypy = "^0.991"
flake8-black = "^0.3.5"
flake8-import-order = "^0.18.2"
flake8-bugbear = "^22.12.6"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
